--- a/source/_includes/navigation.html
+++ b/source/_includes/navigation.html
@@ -1,3 +1,10 @@
+<script type="text/javascript">
+    function addCustomSite(form_) {
+        var input = $(form_).find("input")[0];
+        input.value = "site:{{ site.url | shorthand_url }} " + input.value;
+    }
+</script>
+
 <ul class="subscription" data-subscription="rss{% if site.subscribe_email %} email{% endif %}">
   <li><a href="{{ site.subscribe_rss }}" rel="subscribe-rss" title="subscribe via RSS">RSS</a></li>
   {% if site.subscribe_email %}
@@ -5,9 +12,8 @@
   {% endif %}
 </ul>
   {% if site.simple_search %}
-<form action="{{ site.simple_search }}" method="get">
+<form action="{{ site.simple_search }}" method="get" onsubmit="javascript: addCustomSite(this);">
   <fieldset role="search">
-    <input type="hidden" name="q" value="site:{{ site.url | shorthand_url }}" />
     <input class="search" type="text" name="q" results="0" placeholder="Search"/>
   </fieldset>
 </form>
