refactor: access taxonomy by variable name

--- a/layouts/shortcodes/listtax.html
+++ b/layouts/shortcodes/listtax.html
@@ -4,7 +4,7 @@
 
 <ul>
 	<!-- loop all tags that you've used -->
-	{{ range $name, $taxonomy := .Site.Taxonomies.categories }}
+	{{ range $name, $taxonomy := (index .Site.Taxonomies $tax) }}
 		<li><a href="/categories/{{ $name | urlize }}">{{ $name }}</a></li>
 	{{end}}
 </ul>
