--- a/layouts/taxonomy/category.html
+++ b/layouts/taxonomy/category.html
@@ -1,25 +1,35 @@
+
 {{ partial "header.html" . }}
-
 <div id="main">
- <div id="content">
-  <div class="blog-index">
-     <section id="main">
-      <div>
-        <h1 id="title">Items in {{ .Title }}</h1>
-
-        <ul>
-        {{ $data := .Data }}
-        {{ range $key, $value := .Data.Pages }}
-        <li><a href="{{.Permalink}}">{{ .Title }}</a></li>
-        {{ end }}
-       </ul>
-      </div>
-    </section> 
+  <div id="content">
+    <div>
+      <article role="article">
+        <header>
+          <h1 class="entry-title">
+            Items in {{ .Title }}  <!-- title, in this case it will be "Archive page" -->
+          </h1>
+        </header>
+        <div id="blog-archives" class="category">
+          {{ range .Data.Pages }}
+          <h2>
+            {{ .Date | dateFormat "2006"}} <!-- print publish year -->
+          </h2>
+          <article>
+            <h1>
+              <a href="{{ .Permalink }}" title="{{ .Title }}">{{ .Title }}</a>
+            </h1>
+            <time>
+              <span class="month">{{ .Date | dateFormat "Jan" }}</span> <!-- print publish month -->
+              <span class="day">{{ .Date | dateFormat "2" }}</span> <!-- print publish day -->
+            </time>
+              <!-- if you want pages summary you can print it here {{ .Summary }} -->
+          </article>
+          {{ end }}
+        </div>
+      </article>
+    </div>
+    {{ partial "sidebar.html" . }}
   </div>
-
-  {{ partial "sidebar.html" . }}    <!-- sidebar -->
- </div>
 </div>
-
-{{ partial "footer.html" . }}   <!-- footer -->
+{{ partial "footer.html" . }}
 
