add button to share via twitter

--- a/layouts/partials/post_footer.html
+++ b/layouts/partials/post_footer.html
@@ -8,7 +8,11 @@
   </p>
 
   <!-- For sharing stuff -->
-  <!-- <div class="sharing"> </div> -->
+  <div class="sharing">
+      <a href="https://twitter.com/share" class="twitter-share-button" data-via="alvarobiz" data-hashtags="blog">Tweet this article</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+     
+  </div>
 
   <!-- PrevInSection and nextInSection point to previous and next page in the same section, in this case "post"
        this way we won't see other pages.
