--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -20,11 +20,19 @@
 
 </ul>
 
+<script type="text/javascript">
+    function addCustomSite(form_) {
+        var input = form_.getElementsByTagName("input")[0];
+        var siteURL = form_.getElementsByTagName("input")[1];
+        input.value = siteURL.value + " " + input.value;
+    }
+</script>
+
 {{ if isset .Site.Params "search_engine_url" }}
-<form action="{{ .Site.Params.search_engine_url }}" method="get" target="_blank">
+<form action="{{ .Site.Params.search_engine_url }}" method="get" target="_blank" onsubmit="javascript: addCustomSite(this);">
   <fieldset role="search">
   	<input class="search" type="text" name="q" results="0" placeholder="Search"/>
-    <input type="hidden" name="q" value="site:{{ "/" | absURL }}" />
+    <input type="hidden" value="site:{{ "/" | absURL }}" />
   </fieldset>
 </form>
 {{end}}
