Defect: too many categories

--- a/static/css/hugo-octopress.css
+++ b/static/css/hugo-octopress.css
@@ -1057,7 +1057,9 @@ article header h1 a:hover {
 article header p {
     font-size: .9em;
     color: #aaa;
-    margin: 0
+    margin: 0;
+    max-height: 6.5em;
+    overflow: hidden;
 }
 article header p.meta {
     text-transform: uppercase;
