--- a/layouts/wholearchive/single.html
+++ b/layouts/wholearchive/single.html
@@ -10,7 +10,7 @@
         </header>
         <div id="blog-archives" class="category">
           {{ .Content }} <!-- content of the markdown file. note that inside the range .Content will point to each page's content -->
-          {{ range (where .Site.Pages "Section" "!=" "pages") }}
+          {{ range (where .Site.RegularPages "Section" "!=" "pages") }}
           <h2>
             {{ .Date | dateFormat "2006"}} <!-- print publish year -->
           </h2>
